# pdf_to_docx_converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_CREATION.md  LICENSE  Makefile  PROGRESS.md  QUICKSTART.md  README.md  SSH_SETUP.md  TEST_FIXES.md  __init__.py  github_setup.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.cfg  setup.py  verify_fixes.sh
config/: font_mappings.json  ocr_languages.json
src/: __init__.py  cli.py  docx_builder.py  layout_engine.py  ocr_processor.py  pdf_analyzer.py
tests/: conftest.py  test_basic_setup.py  test_ocr_processor.py  test_pdf_analyzer.py
tests/sample_files/: .gitkeep
