[metadata]
name = pdf-to-docx-converter
version = 1.0.0
description = A powerful Python tool that converts PDF files to Microsoft Word DOCX format while preserving layout, styling, and performing OCR on embedded images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pdf-to-docx-converter
author = PDF to DOCX Converter Team
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Office Suites
    Topic :: Text Processing :: Markup
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyMuPDF>=1.23.0
    pytesseract>=0.3.10
    python-docx>=0.8.11
    Pillow>=10.0.0
    opencv-python>=4.8.0
    numpy>=1.24.0
    click>=8.1.0
    colorama>=0.4.6
    tqdm>=4.65.0
    pyyaml>=6.0

[options.packages.find]
where = .
include = src*

[options.entry_points]
console_scripts =
    pdf-to-docx = src.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
ocr-extras =
    easyocr>=1.7.0

[tool:pytest]
testpaths = tests
python_paths = .
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests

[coverage:run]
source = src
omit = tests/*, setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git, __pycache__, build, dist, .eggs, *.egg-info, .venv, .tox

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-fitz.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-pytesseract.*]
ignore_missing_imports = True

[mypy-docx.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True
